fixed tools used/tools spacing and size

--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -275,7 +275,7 @@ div {
     div .toolsUsed {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         padding: 1rem;
         width: 100%;
@@ -293,13 +293,13 @@ div {
     }
 
     div .tools {
-        font-size: 2.5rem;
-        margin: 1rem;
+        font-size: 2.2rem;
+        // margin: .5rem;
         font-weight: 700;
         color: $color-primary;
         text-align: right;
         width: 100%;
-        line-height: 3rem;
+        // line-height: 2.5rem;
         font-style: italic;
     }
 
